[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "receipt_layoutlm"
version = "0.1.0"
description = "LayoutLM training package for receipt understanding integrated with DynamoDB"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Tyler Norlund", email = "tnorlund@icloud.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "torch>=2.2.0",
  "transformers>=4.40.0",
  "datasets>=2.19.0",
  "numpy>=1.26.0",
  "boto3>=1.34.0",
  "pydantic>=2.10.6",
  "tqdm>=4.66.0",
  "filelock>=3.13.0",
  "Pillow>=10.0.0",
  "sentencepiece>=0.1.99",
  "seqeval>=1.2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "black==25.1.0",
  "isort==6.0.1",
  "mypy>=1.16.1",
  "flake8>=6.0.0",
]

[project.scripts]
layoutlm-cli = "receipt_layoutlm.cli:main"

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 79

[tool.pytest.ini_options]
markers = [
  "end_to_end: marks tests as end-to-end (deselect with '-m \"not end_to_end\"')",
]


