[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "receipt-neo4j"
version = "0.1.0"
description = "Neo4j graph database client for receipt data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Tyler Norlund" }
]
keywords = ["neo4j", "graph", "receipts", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "neo4j>=5.0.0",
    "receipt-dynamo",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.19.0",
]

[tool.hatch.build]
exclude = [
  "tests/",
  "**/__pycache__/",
]

[tool.hatch.build.targets.wheel]
packages = ["receipt_neo4j"]

[tool.ruff]
target-version = "py312"
line-length = 79

[tool.black]
line-length = 79
target-version = ["py312"]
