[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "receipt_places"
version = "0.1.0"
description = "Google Places API client with DynamoDB caching for receipt processing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Tyler Norlund" }
]
keywords = [
    "receipt",
    "google-places",
    "caching",
    "dynamodb",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "boto3>=1.34.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tenacity>=8.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "moto[dynamodb]>=5.0.0",
    "responses>=0.25.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "boto3-stubs[dynamodb]>=1.34.0",
]

[project.urls]
Homepage = "https://github.com/tnorlund/Portfolio"
Repository = "https://github.com/tnorlund/Portfolio"

[tool.hatch.build.targets.wheel]
packages = ["receipt_places"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long
    "B008",   # function call in default argument
]

[tool.ruff.isort]
known-first-party = ["receipt_places", "receipt_dynamo"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["receipt_places"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

