[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "receipt_places"
version = "0.1.0"
description = "Google Places API client with DynamoDB caching for receipt processing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Tyler Norlund" }
]
keywords = [
    "receipt",
    "google-places",
    "caching",
    "dynamodb",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "receipt-dynamo",              # DynamoDB client for caching (brings boto3)
    "requests>=2.31.0",            # HTTP client for Google Places API
    "pydantic>=2.0.0",             # Data validation
    "pydantic-settings>=2.0.0",    # Settings management
    "tenacity>=8.0.0",             # Retry logic
    "structlog>=24.0.0",           # Structured logging
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "moto[dynamodb]>=5.0.0",
    "responses>=0.25.0",
    "ruff>=0.5.0",
    "black>=25.0.0",
    "isort>=5.13.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "boto3-stubs[dynamodb]>=1.34.0",
    "types-requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/tnorlund/Portfolio"
Repository = "https://github.com/tnorlund/Portfolio"

[tool.hatch.build.targets.wheel]
packages = ["receipt_places"]
include = ["receipt_places/py.typed"]

[tool.ruff]
target-version = "py312"
line-length = 79

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "B904",   # raise without from inside except
]

[tool.ruff.lint.isort]
known-first-party = ["receipt_places", "receipt_dynamo", "receipt_agent", "receipt_chroma"]

[tool.black]
line-length = 79
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["receipt_places"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

