[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "receipt_trainer"
version = "0.1.0"
authors = [
  { name="Tyler Norlund", email="tnorlund@icloud.com" },
]
description = "A package for training LayoutLM models on receipt data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Core dependencies
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.12.0",
    "wandb>=0.15.0",
    
    # Data processing and ML
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "boto3>=1.26.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    
    # AWS Infrastructure
    "pulumi>=3.0.0",
    "pulumi-aws>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=receipt_trainer"
markers = [
    "unit: mark test as a unit test",
    "integration: mark test as an integration test",
]

[tool.coverage.run]
source = ["receipt_trainer"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "raise ImportError",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 