[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chromadb-enhanced-compaction"
version = "0.0.1"
description = "Enhanced ChromaDB compaction Lambda"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
# Use this extra so infra.EcsLambda can detect local monorepo deps and include them.
lambda = [
  "receipt-label[lambda]",
  "receipt-dynamo",
]

