[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "receipt-dynamo"
version = "0.1.0"
authors = [
  { name="Tyler Norlund", email="tnorlund@icloud.com" },
]
description = "A Python package for accessing DynamoDB for receipt data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "Pillow",
    "boto3>=1.26.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "moto",
    "freezegun",
]

[tool.hatch.build.targets.wheel]
packages = ["receipt_dynamo"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
addopts = "-v --cov=receipt_dynamo"
markers = [
    "unit: mark test as a unit test",
    "integration: mark test as an integration test",
]

[tool.coverage.run]
source = ["receipt_dynamo"]
omit = ["test/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "raise ImportError",
] 