[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "glyphstudio"
version = "0.1.0"
description = "Parametric stroke-skeleton glyph fonts for synthetic receipts"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pillow",
    "receipt-chroma",
]

[tool.setuptools]
packages = ["glyphstudio"]
