[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "glyphstudio"
version = "0.1.0"
description = "Parametric stroke-skeleton glyph fonts for synthetic receipts"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pillow",
]

[project.optional-dependencies]
# receipt-chroma is a local monorepo package (not on PyPI). Only
# section_propagate / section_propagate_eval need it; the glyph MCP Lambda
# image installs the default (numpy + PIL only) package and must stay
# resolvable without it.
sections = ["receipt-chroma"]

[tool.setuptools]
packages = ["glyphstudio"]
